--- a/src/components/gameplay-card/gameplay-card.style.scss
+++ b/src/components/gameplay-card/gameplay-card.style.scss
@@ -1,4 +1,5 @@
 @import '../../sass/variables.scss';
+@import '../../sass/mixins.scss';
 
 .gameplay-card{
     background-image: linear-gradient(135deg,$color-card-1, $color-card-2);
@@ -10,6 +11,10 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
+
+    @include response(phone){
+        padding: 3rem 5rem;
+    }
 
     .treats-icon{
         height: 8rem;
@@ -24,6 +29,10 @@
 
         display: flex;
 
+        @include response(phone){
+            font-size: 2.5rem;
+        }
+
         .complete-number{
             position: absolute;
             font-size: 1.6rem;
@@ -34,6 +43,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
+
+            @include response(phone){
+                font-size: 2rem;
+            }
         }
 
         .level{
