--- a/src/pages/rarity/rarity.style.scss
+++ b/src/pages/rarity/rarity.style.scss
@@ -8,6 +8,59 @@
         padding: 3rem;
     }
 
+    .section-dropdown{
+
+        margin-bottom: 2rem !important;
+        
+        @include response(phone){
+            font-size: 2.5rem;
+
+            &::after{
+                content: '';
+                display: block;
+                height: 1px;
+                background-color: $color-text;
+                margin-top: 1rem;
+            }
+            &::before{
+                content: '';
+                display: block;
+                height: 1rem;
+                margin-top: 1rem;
+            }
+        }
+    
+        &__icon{
+            display: none;
+            width: 2.5rem;
+            margin-right: 2rem;
+
+            @include response (phone){
+                display: inline;
+                transform: rotate(180deg);
+            }
+        }
+        &__number{
+
+            @include response(phone){
+                display: none;                
+            }
+        }
+
+        .reverse{
+            transform: rotate(360deg);
+        }
+
+        .disable{
+            @include response(phone){
+                display: none;
+            }
+        }
+    }
+    .visible{
+        display: inline;
+    }
+
     &__heading{
         text-align: center;
 
@@ -75,8 +128,16 @@
 
     &__color{
 
+        @include response(phone){
+            display: none;
+        }
+
         .text{
             font-size: 2rem;
+
+            @include response(phone){
+                padding: 2rem 0;
+            }
 
             .common{
                 color: $color-common;
@@ -114,8 +175,8 @@
             }
 
             .container{
-                height: 30rem;
-                width: 30rem;
+                height: 23rem;
+                width: 23rem;
                 border-radius: 50%;
 
                 display: flex;
@@ -129,26 +190,38 @@
                 }
 
                 @include response(phone){
-                    height: 15rem;
-                    width: 15rem;
+                    height: 12rem;
+                    width: 12rem;
                 }
 
             }
             .common-per{
-                border: .5rem solid $color-common;
+                border: .4rem solid $color-common;
                 color: $color-common;
+
+                @include response(phone){
+                    border: .4rem solid $color-common;
+                }
             }
             .rare-per{
-                border: .5rem solid $color-rare;
+                border: .4rem solid $color-rare;
                 color: $color-rare;
+
+                @include response(phone){
+                    border: .4rem solid $color-rare;
+                }
             }
             .ultra-rare-per{
-                border: .5rem solid $color-ultra-rare;
-                color: $color-ultra-rare
+                border: .4rem solid $color-ultra-rare;
+                color: $color-ultra-rare;
+
+                @include response(phone){
+                    border: .4rem solid $color-ultra-rare;
+                }
             }
 
             .type{
-                font-size: 4rem;
+                font-size: 3rem;
                 font-weight: 600;
 
                 @include response(tab-port){
@@ -156,11 +229,11 @@
                 }
 
                 @include response(phone){
-                    font-size: 2rem;
+                    font-size: 1.5rem;
                 }
             }
             .percentage{
-                font-size: 6rem;
+                font-size: 5rem;
                 font-weight: 600;
 
                 @include response(tab-port){
@@ -168,15 +241,24 @@
                 }
 
                 @include response(phone){
-                    font-size: 3rem;
+                    font-size: 2rem;
                 }
             }
         }
     }
 
     &__fur-color{
+
+        @include response(phone){
+            display: none;
+        }
+
         .text{
             font-size: 2rem;
+
+            @include response(phone){
+                padding: 2rem 0;
+            }
         }
         .dog-container{
 
@@ -246,12 +328,20 @@
 
     &__eye-color{
 
+        @include response(phone){
+            display: none;
+        }
+
         .heading{
             text-align: center;
         }
 
         .text{
             font-size: 2rem;
+
+            @include response(phone){
+                padding: 2rem 0;
+            }
 
             .common{
                 color: $color-common;
@@ -335,11 +425,19 @@
     &__nose-color{
         margin-bottom: 2rem;
 
+        @include response(phone){
+            display: none;
+        }
+
         .heading{
             text-align: center;
         }
         .text{
             font-size: 2rem;
+
+            @include response(phone){
+                padding: 2rem 0;
+            }
 
             .common{
                 color: $color-common;
@@ -406,11 +504,19 @@
 
         margin-bottom: 4rem;
 
+        @include response(phone){
+            display: none;
+        }
+
         .heading{
             text-align: center;
         }
         .text{
             font-size: 2rem;
+
+            @include response(phone){
+                padding: 2rem 0;
+            }
         }
 
         .body-part{
@@ -441,8 +547,17 @@
         }
     }
     &__anatomy{
+
+        @include response(phone){
+            display: none;
+        }
+
         .text{
             font-size: 2rem;
+
+            @include response(phone){
+                padding: 2rem 0;
+            }
         }
 
         .body-parts{
